--- a/app/views/fetf/agreement/v1-3/agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-3/agreement-accepted.html
@@ -29,7 +29,7 @@
           <h2 class="govuk-heading-m">What happens next</h2>
           <p class="govuk-body">You may now purchase the items detailed in the agreement.</p>
           <p class="govuk-body">Once the items are installed and operational, you can <a href="#">submit your claim</a>.</p>
-          <p class="govuk-body">You should read the <a href="#" target="_blank">Farming Equipment and Technology Fund Manual 2024 (opens in new tab)</a>  on GOV.UK. It explains the steps you must follow to comply with the funding rules for your grant.</p>
+          <p class="govuk-body">You should read the <a href="#" target="_blank">Claim your Farming and Technology Equipment and Technology Fund (FETF) 2024 grant payment (opens in new tab)</a> . It explains how to submit a Farming Equipment and Technology Fund claim.</p>
           <p class="govuk-body">Download copies of your agreement documents:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li><a href="/public/downloads/fetf/fetf-grant-funding-agreement.txt">Your grant funding agreement</a></li>
