Task list status update

--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -343,7 +343,7 @@ function showVisualEvidenceSection() {
 
 
 
-     <a href="/fetf/claim/v1-0/upload?01=c&02=n&03=n&04=n&05=n&06=n">
+     <a href="/fetf/claim/v1-0/upload?01=c">
         <button class="govuk-button">
           Save and continue
         </button>
