--- a/app/views/fetf/_includes/activity-list_task-section_claim.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim.html
@@ -93,7 +93,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="upload?01=n&02=n&03=n&04=n&05=n&06=n" aria-describedby="application-details-2-status">Upload claim evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="upload?01=n" aria-describedby="application-details-2-status">Upload claim evidence</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-4-status">
           <strong class="govuk-tag govuk-tag--blue">
