FTF Confluence Iterations

--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -165,12 +165,12 @@
             <strong>What you need to do</strong><br><br>
 
 
-            <a href="login">Download the Word application form and Excel appendix</a>
+            <a href="login">Sign in and download the Word application form and Excel appendix</a>
 
             <br><br>
 
 
-            Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
+            <a href="/_common/not-testing.html">Check what evidence you must provide</a>.<br><br>
 
             Evidence could include:<br><br>
 
@@ -186,13 +186,11 @@
 
               <br>
 
-              You should also read <a href="/_common/not-testing.html">How to submit a Water Management grant full application</a>.<br>
-
               <br>
                         
               When you are ready to submit your application, <a href="/_common/not-testing.html">upload your application forms and evidence</a>.<br><br>
 
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
+            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of the application forms.
 
             <br><br><br>
 
