--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submit your Water Management grant claim<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submit your Water Management grant claim by 01/12/2024<br><br>
 
           <script>
             function navigateToPage() {
