Add livestock to the summary if item selected

--- a/app/views/fetf/application/v1-0/selected-items-livestock.html
+++ b/app/views/fetf/application/v1-0/selected-items-livestock.html
@@ -65,6 +65,35 @@
 
 
 
+<h2 class="govuk-heading-m">Livestock information</h2>
+
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Total number of bovine animals
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{data['bovineAnimals']}}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a href="#" class="govuk-body-s" style="text-align: right;">Change</a>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          County parish holding number
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{data['accountNumber1']}}/{{data['accountNumber2']}}/{{data['accountNumber3']}}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a href="#" class="govuk-body-s" style="text-align: right;">Change</a>
+        </dd>
+      </div>
+    </dl>
+  
+  </div>
+</div>
 
 
   
