--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -89,11 +89,13 @@ Upload1
 {% if item.serialNumber %}
 <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper">
-    <label class="govuk-label govuk-label--m" for="event-name">
-      Item's serial number
+    <label class="govuk-label govuk-label--m" for="serial-number-item">
+      Serial number
     </label>
   </h1>
-  <input class="govuk-input govuk-input--width-20" id="event-name" name="eventName" type="text">
+  <input class="govuk-input govuk-input--width-20" id="serial-number-item" name="serial-number-item" type="text">
+
+  
 </div>
 
 <br><br>
