--- a/app/views/fetf/application/v1-0/item-quantity.html
+++ b/app/views/fetf/application/v1-0/item-quantity.html
@@ -9,11 +9,16 @@
 
 {% block content %}
 
+
+{% if item.category and "Livestock" in item.category %}
+
+ 
+
 <main class="govuk-main-wrapper">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/fetf-add-to-selected-items" method="post">
+    <form action="/fetf-add-to-selected-items-livestock" method="post">
       <input type="hidden" name="termName" value="{{ item.termName }}">
 
     <span class="govuk-caption-l">{{ item.title }} (FETF{{ item.itemCode }})</span>
@@ -31,6 +36,7 @@
     <div class="govuk-input__suffix" aria-hidden="true">item quantity</div>
   </div>
 </div>
+
 
 
 <div class="govuk-button-group">
@@ -65,6 +71,70 @@
 
 
 </main>
+
+
+{% else %}
+
+  
+<main class="govuk-main-wrapper">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+  
+      <form action="/fetf-add-to-selected-items" method="post">
+        <input type="hidden" name="termName" value="{{ item.termName }}">
+  
+      <span class="govuk-caption-l">{{ item.title }} (FETF{{ item.itemCode }})</span>
+  <div class="govuk-form-group">
+    <h1 class="govuk-label-wrapper">
+      <label class="govuk-label govuk-label--l" for="quantity">
+        How many do you need?
+      </label>
+    </h1>
+    <div id="event-name-hint" class="govuk-hint">
+      Maximum quantity: 3
+    </div>
+    <div class="govuk-input__wrapper">
+      <input class="govuk-input govuk-input--width-5" id="quantity" name="quantity" type="text" spellcheck="false">
+      <div class="govuk-input__suffix" aria-hidden="true">item quantity</div>
+    </div>
+  </div>
+  
+  
+  
+  <div class="govuk-button-group">
+  <button type="submit" class="govuk-button" data-module="govuk-button">
+    Continue
+  </button>
+  <br>
+  
+  </form>
+  
+  
+  
+    <a href="/fetf/application/v1-0/selected-items" class="govuk-link">
+      Cancel
+    
+    </a>
+  </div>
+  
+  
+  
+  
+  
+  
+    </div>
+    <div class="govuk-grid-column-one-third">
+      {% include "../../_includes/selected-items-panel.html" %}
+    </div>
+  
+  
+  </div>
+  
+  
+  
+  </main>
+
+  {% endif %}
 
 {% endblock %}
 
