Move livestock question and task list order

--- a/app/views/fetf/_includes/activity-list_task-section_apply.html
+++ b/app/views/fetf/_includes/activity-list_task-section_apply.html
@@ -19,6 +19,15 @@
         </div>
       </li>
 
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>About your business</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+
     <li class="govuk-task-list__item ">
       <div class="govuk-task-list__name-and-hint">
         <div>Select your items</div>
@@ -37,14 +46,7 @@
       </div>
     </li>
   
-    <li class="govuk-task-list__item">
-      <div class="govuk-task-list__name-and-hint">
-        <div>About your business</div>
-      </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-        Cannot start yet
-      </div>
-    </li>
+    
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
@@ -56,6 +58,20 @@
     </li>
   
     </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -76,14 +92,24 @@
         </div>
         </li>
 
+
+        <li class="govuk-task-list__item govuk-task-list__item--with-link">
+          <div class="govuk-task-list__name-and-hint">
+            <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/business-details/business-structure" aria-describedby="application-details-2-status">About your business</a>
+          </div>
+          <div class="govuk-task-list__status" id="application-details-4-status">
+            <strong class="govuk-tag govuk-tag--blue">
+              Not yet started
+            </strong>
+          </div>
+        </li>
+
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/items/equipment-list" aria-describedby="application-details-2-status">Select your items</a>
+          <div>Select your items</div>
         </div>
-        <div class="govuk-task-list__status" id="application-details-4-status">
-          <strong class="govuk-tag govuk-tag--blue">
-            Not yet started
-          </strong>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
         </div>
       </li>
     
@@ -96,14 +122,7 @@
         </div>
       </li>
     
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <div>About your business</div>
-        </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
-        </div>
-      </li>
+     
     
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -131,19 +150,26 @@
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
-        <strong class="govuk-tag govuk-tag--light-blue">
-          In progress
-        </strong>
+          Completed
       </div>
     </li>
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
-        <strong class="govuk-tag govuk-tag--light-blue">
-          In progress
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/items/equipment-list" aria-describedby="application-details-2-status">Select your items</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not yet started
         </strong>
       </div>
     </li>
@@ -197,6 +223,15 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
@@ -215,14 +250,7 @@
       </div>
     </li>
   
-    <li class="govuk-task-list__item">
-      <div class="govuk-task-list__name-and-hint">
-        <div>Check your details</div>
-      </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-        Cannot start yet
-      </div>
-    </li>
+    
   
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
@@ -248,6 +276,15 @@
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -315,6 +352,15 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
@@ -331,23 +377,16 @@
       </div>
     </li>
 
-    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+    
+  
+    <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="../../application/v1-0/business-details/business-structure" aria-describedby="application-details-2-status">About your business</a>
+        <div><a class="govuk-link govuk-task-list__link" href="../../application/v1-0/submit-application/submit" aria-describedby="application-details-2-status">Submit application</a></div>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
         <strong class="govuk-tag govuk-tag--blue">
           Not yet started
         </strong>
-      </div>
-    </li>
-  
-    <li class="govuk-task-list__item">
-      <div class="govuk-task-list__name-and-hint">
-        <div>Submit application</div>
-      </div>
-      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-        Cannot start yet
       </div>
     </li>
   
@@ -365,6 +404,15 @@
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your details</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
           Completed
@@ -432,6 +480,15 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
@@ -490,6 +547,15 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
       </div>
       <div class="govuk-task-list__status" id="application-details-4-status">
@@ -506,14 +572,7 @@
       </div>
     </li>
 
-    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-      <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
-      </div>
-      <div class="govuk-task-list__status" id="application-details-4-status">
-          Completed
-      </div>
-    </li>
+    
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
@@ -544,6 +603,15 @@
         </div>
       </li>
 
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-4-status">
+            Completed
+        </div>
+      </li>
+
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Select your items</a>
@@ -562,14 +630,7 @@
       </div>
     </li>
 
-    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-      <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">About your business</a>
-      </div>
-      <div class="govuk-task-list__status" id="application-details-4-status">
-          Completed
-      </div>
-    </li>
+   
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
