--- a/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
+++ b/app/views/fetf/application/v1-0/business-details/livestock-schemes.html
@@ -40,6 +40,7 @@
     <button type="submit" class="govuk-button" data-module="govuk-button">
       Save and continue
     </button>
+    <a  class="govuk-link" href="#">Skip</a>
 
     </form>
 
