--- a/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-contractor-details.html
@@ -19,7 +19,7 @@
 
     <form action="/fetf-contractor-details" method="post">
 
-      <span class="govuk-caption-l">About your items</span>
+      <span class="govuk-caption-l">Apply</span>
       <h1 class="govuk-heading-l">Contractor details</h1>
 
       <div class="govuk-form-group">
