--- a/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-location-details.html
@@ -20,14 +20,9 @@
     <form action="/fetf-items-other-locations" method="post">
 
       <span class="govuk-caption-l">Apply</span>
-      <h1 class="govuk-heading-l">Location details</h1>
+      <h1 class="govuk-heading-l">Where will the items be stored?</h1>
 
-      <div class="govuk-form-group">
-        <h2 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--m" for="main-location-postcode">
-            Where will the items be stored?
-          </label>
-        </h2>
+      <p class="govuk-body">You can add up to 3 postcodes.</p>
        
 
         <div class="govuk-form-group">
@@ -36,61 +31,15 @@
           </label>
           <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text" autocomplete="postal-code">
         </div>
+        <a href="#" class="govuk-link">Add another</a>
+        <br><br><br>
+        
 
 
-        <!-- <input class="govuk-input govuk-input--width-10" id="main-location-postcode" name="mainLocationPostcode" type="text" aria-describedby="main-location-hint"> -->
-
-        <!-- <br><br><br> -->
+       
 
 
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-              <h1 class="govuk-fieldset__heading">
-                Will they be stored at any other locations?
-              </h1>
-            </legend>
-            
-            <div class="govuk-radios" data-module="govuk-radios">
-
-
-              
-              
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
-                <label class="govuk-label govuk-radios__label" for="contact-2">
-                  Yes
-                </label>
-              </div>
-
-
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="contact-by-phone">
-                    Enter postcode
-                  </label>
-                  
-                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contactByPhone" type="tel" autocomplete="tel">
-                </div>
-                <br>
-                <a href="#" class="govuk-link">Add another</a>
-              </div>
-
-
-
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="contact" name="contact" type="radio" value="email" data-aria-controls="conditional-contact">
-                <label class="govuk-label govuk-radios__label" for="contact">
-                  No
-                </label>
-              </div>
-              
-              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
-              </div>
-              
-            </div>
-          </fieldset>
-        </div>
+       
 
 
 
@@ -99,6 +48,7 @@
 
         
       </div>
+    </div>
 
 
     <button type="submit" class="govuk-button" data-module="govuk-button">
