--- a/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/applicant-business-details/check-your-details.html
@@ -24,11 +24,10 @@
     <!-- <p class="govuk-body">Changes in this section will update your Rural Payments service account.</p> -->
 
     
-    <p class="govuk-body">Changes to this sections will update your Rural Payments service account.</p>
+    <p class="govuk-body">These are the applicant and business details. To make changes <a class="govuk-link" href="#">go to the Rural Payments service</a>.</p>
 
     <h2 class="govuk-heading-m" style="float: left;">Applicant details</h2>
-    <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> applicant details</span></a>
-    </p>
+    
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
@@ -66,7 +65,7 @@
 
 
     <h2 class="govuk-heading-m" style="float: left;">Business details</h2>
-    <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> business details</span></a>
+    
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
