--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -32,7 +32,7 @@
         </dt>
         <dd class="govuk-summary-list__value">
           {{ data['structure'] }}
-          Landowner
+          
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -41,7 +41,7 @@
         </dt>
         <dd class="govuk-summary-list__value">
           {{ data['employeesNumber'] }}
-10
+
         </dd>
       </div>
     </dl>
@@ -56,7 +56,7 @@
           Agriculture - area of farm in hectares
         </dt>
         <dd class="govuk-summary-list__value">
-          35{{ data['agricultureHectares'] }}
+          {{ data['agricultureHectares'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -64,7 +64,7 @@
           Horticulture - area of nursery in hectares
         </dt>
         <dd class="govuk-summary-list__value">
-          23{{ data['horticultureHectares'] }}
+          {{ data['horticultureHectares'] }}
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -72,7 +72,7 @@
           Forestry - area of woodland in hectares
         </dt>
         <dd class="govuk-summary-list__value">
-         50 {{ data['forestryHectares'] }}
+         {{ data['forestryHectares'] }}
         </dd>
       </div>
     </dl>
@@ -104,7 +104,7 @@
           County parish holding number
         </dt>
         <dd class="govuk-summary-list__value">
-          08{{data['accountNumber1']}}123{{data['accountNumber2']}}/4567{{data['accountNumber3']}}
+          {{data['accountNumber1']}}{{data['accountNumber2']}}/{{data['accountNumber3']}}
         </dd>
       </div>
     </dl>
@@ -120,7 +120,7 @@
           Which farm assurance schemes do you belong to?
         </dt>
         <dd class="govuk-summary-list__value">
-          Red Tractor{{ data['assurance-scheme'] }}
+          {{ data['assurance-scheme'] }}
         </dd>
       </div>
     </dl>
@@ -136,7 +136,7 @@
           Which livestock health or disease prevention schemes do you belong to?
         </dt>
         <dd class="govuk-summary-list__value">
-          The National Animal Disease Information Service {{ data['livestockSchemes'] }}
+          {{ data['livestockSchemes'] }}
         </dd>
       </div>
     </dl>
