Claims: separating out payments and invoices

--- a/app/views/fetf/claim/v1-0/claim-item-detail2.html
+++ b/app/views/fetf/claim/v1-0/claim-item-detail2.html
@@ -122,8 +122,8 @@ function showVisualEvidenceSection() {
 <div class="govuk-grid-row">
 <div class="govuk-grid-column-two-thirds">
 
-  <p class="govuk-label govuk-label--m">Financial evidence</p>
-  <p class="govuk-body">For example, invoices, receipts and bank statements (you can cross out other transactions)</p>
+  <p class="govuk-label govuk-label--m">Invoices</p>
+  <p class="govuk-body">For example, invoice or receipts (you can cross out other transactions)</p>
   <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
 
 
@@ -148,19 +148,19 @@ function showVisualEvidenceSection() {
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="evidence1" name="item1" type="checkbox" value="evidence1">
             <label class="govuk-label govuk-checkboxes__label" for="evidence1">
-              Financial evidence 1.pdf , 3MB
+              Invoice evidence 1.pdf , 3MB
             </label>
           </div>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="evidence2" name="item1" type="checkbox" value="evidence2">
             <label class="govuk-label govuk-checkboxes__label" for="evidence2">
-              Financial evidence 2.pdf , 3MB
+              Invoice evidence 2.pdf , 3MB
             </label>
           </div>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="evidence3" name="item1" type="checkbox" value="evidence3">
             <label class="govuk-label govuk-checkboxes__label" for="evidence3">
-              Financial evidence 3.pdf , 3MB
+              Invoice evidence 3.pdf , 3MB
             </label>
           </div>
         </fieldset>
@@ -176,13 +176,13 @@ function showVisualEvidenceSection() {
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="evidence4" name="item2" type="checkbox" value="evidence4">
               <label class="govuk-label govuk-checkboxes__label" for="evidence4">
-                Financial evidence 1.pdf , 3MB
+                Invoice evidence 1.pdf , 3MB
               </label>
             </div>
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="evidence5" name="item2" type="checkbox" value="evidence5">
               <label class="govuk-label govuk-checkboxes__label" for="evidence5">
-                Financial evidence 2.pdf , 3MB
+                Invoice evidence 2.pdf , 3MB
               </label>
             </div>
             
@@ -197,17 +197,17 @@ function showVisualEvidenceSection() {
   <div id="filesAddedContainer" style="display: none;">
       <p class="govuk-label govuk-label--s">Files added</p><br>
       <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 1.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;">Invoice evidence 1.pdf , 3MB</p>
           <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
       </div>
       <hr style="margin: 20px 0;">
       <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 2.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;">Invoice evidence 2.pdf , 3MB</p>
           <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
       </div>
       <hr style="margin: 20px 0;">
       <div style="display: flex; justify-content: space-between; align-items: center;">
-          <p class="govuk-body" style="margin-bottom: 0;">Financial evidence 3.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;">Invoice evidence 3.pdf , 3MB</p>
           <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
       </div>
       <hr style="margin: 20px 0;">
@@ -224,6 +224,118 @@ function showVisualEvidenceSection() {
 </div>
 <br><br>
 </div>
+
+
+<br><br><br>
+
+
+
+
+
+
+
+  <p class="govuk-label govuk-label--m">Payment evidence</p>
+  <p class="govuk-body">For example, bank statements (you can cross out other transactions)</p>
+  <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p><br>
+
+
+
+
+  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="paymentEvidence" name="payment" type="checkbox" value="email" data-aria-controls="conditional-payment">
+      <label class="govuk-label govuk-checkboxes__label" for="paymentEvidence">
+        Include evidence already uploaded
+      </label>
+    </div>
+    <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden" id="conditional-payment">
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+          <h1 class="govuk-fieldset__heading">
+            Slurry separators (FETF27)
+          </h1>
+        </legend>
+        <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="payment1" name="payment1" type="checkbox" value="evidence1">
+            <label class="govuk-label govuk-checkboxes__label" for="payment1">
+              Payment evidence 1.pdf , 3MB
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="payment2" name="payment2" type="checkbox" value="evidence2">
+            <label class="govuk-label govuk-checkboxes__label" for="payment2">
+              Payment evidence 2.pdf , 3MB
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="payment3" name="payment3" type="checkbox" value="evidence3">
+            <label class="govuk-label govuk-checkboxes__label" for="payment3">
+              Payment evidence 3.pdf , 3MB
+            </label>
+          </div>
+        </fieldset>
+
+<br><br>
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            <h1 class="govuk-fieldset__heading">
+              Salad leaf harvester (FETF8)
+            </h1>
+          </legend>
+          <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input" id="payment4" name="payment4" type="checkbox" value="evidence4">
+              <label class="govuk-label govuk-checkboxes__label" for="payment4">
+                Payment evidence 1.pdf , 3MB
+              </label>
+            </div>
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input" id="payment5" name="payment5" type="checkbox" value="evidence5">
+              <label class="govuk-label govuk-checkboxes__label" for="payment5">
+                Payment evidence 2.pdf , 3MB
+              </label>
+            </div>
+            
+          </fieldset>
+          
+      
+      </div>
+    </div>
+
+    <br><br>
+
+  <div id="filesAddedContainer" style="display: none;">
+      <p class="govuk-label govuk-label--s">Files added</p><br>
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+          <p class="govuk-body" style="margin-bottom: 0;">Payment evidence 1.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
+      </div>
+      <hr style="margin: 20px 0;">
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+          <p class="govuk-body" style="margin-bottom: 0;">Payment evidence 2.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
+      </div>
+      <hr style="margin: 20px 0;">
+      <div style="display: flex; justify-content: space-between; align-items: center;">
+          <p class="govuk-body" style="margin-bottom: 0;">Payment evidence 3.pdf , 3MB</p>
+          <p class="govuk-body" style="margin-bottom: 0;"><a href="#" class="govuk-link">Delete file</a></p>
+      </div>
+      <hr style="margin: 20px 0;">
+      <br>
+  </div>
+
+  <p class="govuk-label govuk-label--s">Upload a file</p>
+  <div class="container">
+      <p class="govuk-body text" style="margin-bottom: 0;">Drag and drop files here or</p>
+      <button type="button" class="govuk-button govuk-button--secondary button" data-module="govuk-button" onclick="showFilesAddedSection()">Choose file</button>
+  </div>
+  <br><br>
+</div>
+
+<br><br>
+
 
 
 <br><br><br>
@@ -257,19 +369,19 @@ function showVisualEvidenceSection() {
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="evidence6" name="item3" type="checkbox" value="evidence6">
           <label class="govuk-label govuk-checkboxes__label" for="evidence6">
-            Financial evidence 1.pdf , 3MB
+            Visual evidence 1.pdf , 3MB
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="evidence7" name="item3" type="checkbox" value="evidence7">
           <label class="govuk-label govuk-checkboxes__label" for="evidence7">
-            Financial evidence 2.pdf , 3MB
+            Visual evidence 2.pdf , 3MB
           </label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="evidence8" name="item3" type="checkbox" value="evidence8">
           <label class="govuk-label govuk-checkboxes__label" for="evidence8">
-            Financial evidence 3.pdf , 3MB
+            Visual evidence 3.pdf , 3MB
           </label>
         </div>
       </fieldset>
@@ -285,13 +397,13 @@ function showVisualEvidenceSection() {
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="evidence9" name="item4" type="checkbox" value="evidence9">
             <label class="govuk-label govuk-checkboxes__label" for="evidence9">
-              Financial evidence 1.pdf , 3MB
+              Visual evidence 1.pdf , 3MB
             </label>
           </div>
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="evidence10" name="item4" type="checkbox" value="evidence10">
             <label class="govuk-label govuk-checkboxes__label" for="evidence10">
-              Financial evidence 2.pdf , 3MB
+              Visual evidence 2.pdf , 3MB
             </label>
           </div>
           
