--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -95,6 +95,33 @@
       </div>
     </dl>
 
+
+
+
+    <h2 class="govuk-heading-m" style="float: left;">Livestock information</h2>
+    <p class="govuk-body" style="float: right;"><a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> land details</span></a>
+    </p>
+    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+      
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          Total number of animals
+        </dt>
+        <dd class="govuk-summary-list__value">
+          30{{data['bovineAnimals']}}
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+          County parish holding number
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{data['accountNumber1']}}{{data['accountNumber2']}}/{{data['accountNumber3']}}
+        </dd>
+      </div>
+    </dl>
+
+
 <button type="submit" class="govuk-button" data-module="govuk-button">
   Save and continue
 </button>
